@@ -1,3 +1,8 @@
+2005-03-10  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/callbacks.c: (get_icon_for_device), (add_new_disks):
+	Better icon theme support.
+
 2005-03-09  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/procman.c: (procman_data_new):
